--- a/appsettings.json
+++ b/appsettings.json
@@ -11,6 +11,6 @@
   },
   "Firebase": {
     "ProjectId": "friends-fan-hub",
-    "ServiceAccountPath": "C:\\Users\\hanif\\.secrets\\friends-fan-hub-firebase-adminsdk.json"
+    "ServiceAccountPath": ""
   }
 }
